--- a/package.json
+++ b/package.json
@@ -32,12 +32,23 @@
     "@emotion/cache": "^11",
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11",
+    "@ethersproject/abstract-provider": "^5.0.10",
+    "@ethersproject/abstract-signer": "^5.0.14",
+    "@ethersproject/address": "^5.0.11",
+    "@ethersproject/bignumber": "^5.0.15",
+    "@ethersproject/bytes": "^5.0.11",
+    "@ethersproject/contracts": "^5.0.12",
+    "@ethersproject/networks": "^5.0.9",
+    "@ethersproject/providers": "^5.0.24",
+    "@ethersproject/solidity": "^5.0.10",
+    "@ethersproject/wallet": "^5.0.12",
     "@material-ui/core": "5.0.0-alpha.24",
     "@material-ui/icons": "5.0.0-alpha.24",
     "@material-ui/lab": "5.0.0-alpha.24",
     "@material-ui/system": "5.0.0-alpha.24",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "ethers": "^5.0.32",
     "i18next": "^19.8.9",
     "react": "=0.0.0-experimental-553440bd1",
     "react-dom": "=0.0.0-experimental-553440bd1",
